some basic changes

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -19,10 +19,10 @@
 		<footer>
 			<p>Jigar Thummar</p>
 			<div class="social">
-				<a href="#"><i class="fab fa-github"></i></a>
-				<a href="#"><i class="fab fa-instagram"></i></a>
-				<a href="#"><i class="fab fa-telegram"></i></a>
-				<a href="#"><i class="fab fa-linkedin"></i></a>
+				<a href="https://github.com/jigarthummar"><i class="fab fa-github"></i></a>
+				<a href="https://www.instagram.com/jigarthummar/"><i class="fab fa-instagram"></i></a>
+				<a href=""><i class="fab fa-telegram"></i></a>
+				<a href="https://www.linkedin.com/in/jigar-thummar-aa22201b0/"><i class="fab fa-linkedin"></i></a>
 			</div>
 		</footer>
 	</div>
